tests/invalid/type/non_clone_no_specialization_static.pts
prototype A {
  function f() : A {
    return A.clone();
  }
}

prototype B : A { }

function main() : void {
  B x = B.clone();
  B b = x.f();
}
